[project]
name = "physio-signal-lab"
version = "0.1.0"
description = "Reproducible ECG and HRV analysis for public physiological signal datasets."
readme = "public-real-physiological-signal-analysis-plan-v4plan.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "matplotlib>=3.9",
    "neurokit2>=0.2.10",
    "numpy>=2.0",
    "pandas>=2.2",
    "pyyaml>=6.0",
    "scipy>=1.14",
    "wfdb>=4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
physio-signal-lab = "physio_signal_lab.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
